<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_appbar_empty" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false">

        <com.base.app.ui.custom.StepProgressView
            android:id="@+id/stepsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            app:arcColor="@color/green"
            app:arcPadding="0dp"
            app:colorInactive="@color/lighter_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:nodeColor="@color/green"
            app:nodeHeight="30dp"
            app:stepsCount="3"
            app:textNodeColor="@color/green"
            app:textNodeTitleColor="@color/black"
            app:textNodeTitleSize="18sp"
            app:textTitlePadding="10dp"
            app:titlesEnabled="true"
            tools:visibility="visible" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/layout_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stepsView">

            <include
                layout="@layout/layout_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/layout_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stepsView"
            app:layout_constraintVertical_bias="0.03">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="@string/fix_device_title_msg" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:lineSpacingMultiplier="1.2"
                android:maxWidth="300dp"
                android:textColor="@color/medium_grey"
                android:textSize="16sp"
                tools:text="@string/fix_device_desc_msg" />

        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toTopOf="@+id/layout_progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_header"
            app:lottie_autoPlay="false"
            app:lottie_loop="false"
            tools:src="@drawable/ic_camera" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_progress"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/layout_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <io.github.krtkush.lineartimer.LinearTimerView
                android:id="@+id/timerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                app:initialColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:progressColor="@color/green"
                app:radius="30dp"
                app:strokeWidth="4dp"
                tools:initialColor="@color/green"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_counter"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:gravity="center"
                android:textColor="@color/green"
                android:textSize="35sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.40"
                tools:text="1"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/iv_pause"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_pause_white_24dp"
                android:tint="@color/green"
                android:visibility="gone"
                app:backgroundTint="@color/green"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_counter"
                app:layout_constraintVertical_bias="0.30"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.82">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingTop="20dp"
                android:paddingEnd="15dp"
                android:paddingBottom="20dp"
                android:text="@string/btn_share_results"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:backgroundTint="@color/violet"
                app:icon="@drawable/ic_share_white_24dp"
                app:iconGravity="textStart"
                app:iconPadding="20dp"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingTop="20dp"
                android:paddingEnd="15dp"
                android:paddingBottom="20dp"
                android:text="@string/btn_upload_scan"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:backgroundTint="@color/green"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingTop="20dp"
                android:paddingEnd="15dp"
                android:paddingBottom="20dp"
                android:text="@string/btn_done"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:backgroundTint="@color/green"
                tools:visibility="visible" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_addResults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingTop="20dp"
                android:paddingEnd="15dp"
                android:paddingBottom="20dp"
                android:text="@string/btn_addResults"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:backgroundTint="@color/green"
                tools:visibility="visible" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>